.opsera-healthcp/k8s/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-healthcp-dev
  labels:
    app: healthcp
    environment: dev
    tenant: opsera
    managed-by: opsera-c2c
