.opsera-healthcp/k8s/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: healthcp
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: app
          image: PLACEHOLDER_ECR_URI:v1.0.0
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
